Version 1.0.0

* Prevent grossd from running as root (euid == 0). You may 
  have to modify configuration and state file ownerships
  and/or permissions. Grossd tries to setuid() and setgid()
  to nobody if started by root.
* New match shortcut logic. Now grossd will shortcut after
  a filter match only if no checks are configured (traditional
  greylister) or block_threshold == 0. 

Issues fixed:
#48: Need man pages
#59: grossd 0.9.3 leaks memory
#60: Grossd should do all dns queries as fully qualified
#61: Space Character in Mail From Crashing Gross
#62: Double free() with milter

- changed filter_bits default back to 24, as stated in the docs.

Version 0.9.3

* A few important bug fixes to milter server
* HELOified all the rest of the code. There are still no checks
  that use helo info, but now grossd logs it and also gclient 
  can send it to the server. Check INSTALL details about 
  configuring SJSMS to send helo string over to grossd.
* New logfile format! An example log line: 

  Thu Apr 17 14:50:05 2008 #8505600: a=greylist d=3 w=5 c=127.0.0.2
  s=sender r=recipient h=N/A m=cbl.abuseat.org+1 m=bl.spamcop.net+2
  m=combined.njabl.org+1 m=dnsbl.sorbs.net+1

  where
  a = action
  d = delay
  w = total weight
  c = client ip
  s = sender
  r = recipient
  h = helo/ehlo
  m = matched check with possible weight

- A few important bug fixes to milter server
- behaviour change: grossd now exits after creating the
  statefile when invoked with -C command line option. This
  makes life easier for package maintainers in the future.
- Implemented pidfile creation and checking. New config option
  'pidfile' controls the behaviour. Setting the option will make
  grossd to write the process pid into the file specified by the
  full path. An optional parameter 'check' can be set to keep
  grossd from starting if the pidfile already exists.

  pidfile = /full/path[;check]

  Another way to control this is by command line options -p and -P.