@@ -409,6 +409,7 @@ test_tuple(final_status_t *final, grey_tuple_t *request, tmout_action_t *ta)
 				if (is_in_ring_queue(ctx->filter, digest))
 					retvalue = STATUS_MATCH;
 				else
+					reasonstr = strdup(ctx->config.grey_reason);
 					retvalue = STATUS_GREY;
 			} else {
 				retvalue = STATUS_TRUST;
